# Electronics-service

./: CMakeLists.txt  README.md  TV.h  angajat.cpp  angajat.h  angajati.csv  cerereR.cpp  cerereR.h  cereri.csv  cereriInvalide.csv  cereriReparate  data.csv  electrocasnice.h  frigider.h  iAngajat.h  iElectrocasnice.h  iMeserie.h  icreareElectrocasnice.h  lucruAngajati.cpp  lucruAngajati.h  lucruElectrocasnice.cpp  lucruElectrocasnice.h  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marci.csv  masinaSpalat.h  prelucrareCereri.cpp  raporturi.cpp  run.sh  service.h  test
GUI/: CMakeLists.txt  main2.cpp  mainwindow.cpp
cpp/: angajat.cpp  cerereR.cpp  lucruAngajati.cpp  lucruElectrocasnice.cpp  main.cpp  prelucrareCereri.cpp  raporturi.cpp
headers/: angajat.h  cerereR.h  electrocasnice.h  iAngajat.h  iMeserie.h  lucruElectrocasnice.h  raporturi.h  service.h
outputs/: cereriInvalide.csv
tests/: README.md  angajati.csv  cereri.csv  marci.csv
